# gp_omics

./: .gitignore  CMakeLists.txt  GPC_for_omics.cpp  GPC_for_omics_nan.cpp  README.md  baseline.ipynb  baseline_jacobs.ipynb  baseline_rvc.ipynb  baseline_yachida.ipynb  evaluate.ipynb  fulldata(after_PCA).csv  graph_construction copy 2.ipynb  graph_construction.ipynb  graph_construction.py  reduce_dim.ipynb  reduce_dim_franz.ipynb  reduce_dim_rvc.ipynb
GP_omics/outdir/: split_0_Pred_Y_mean_mean.csv  split_0_Pred_Y_var.csv  split_0_X_test.csv  split_0_X_train.csv  split_0_Y_test.csv  split_0_Y_train.csv  split_0_param_samples.csv  split_10_Pred_Y_mean_mean.csv  split_10_Pred_Y_var.csv  split_10_X_test.csv  split_10_X_train.csv  split_10_Y_test.csv  split_10_Y_train.csv  split_10_param_samples.csv  split_11_Pred_Y_mean_mean.csv  split_11_Pred_Y_var.csv  split_11_X_test.csv  split_11_X_train.csv  split_11_Y_test.csv  split_11_Y_train.csv  split_11_param_samples.csv  split_12_Pred_Y_mean_mean.csv  split_12_Pred_Y_var.csv  split_12_X_test.csv  split_12_X_train.csv  split_12_Y_test.csv  split_12_Y_train.csv  split_12_param_samples.csv  split_13_Pred_Y_mean_mean.csv  split_13_Pred_Y_var.csv  split_13_X_test.csv  split_13_X_train.csv  split_13_Y_test.csv  split_13_Y_train.csv  split_13_param_samples.csv  split_14_Pred_Y_mean_mean.csv  split_14_Pred_Y_var.csv  split_14_X_test.csv  split_14_X_train.csv  split_14_Y_train.csv  (+238 more)
GP_omics/outdir_nan_pca/: split_0_Pred_Y_mean_mean.csv  split_0_X_test.csv  split_0_X_train.csv  (+369 more)
data_rvc/: OTU_table.csv  metadata.tsv  tax_table.csv
(+4 files in other folders)
